test/conformance/kuttl/mutate/refactor/add-emptydirsizelimit/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-emptydir-sizelimit
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
