test/conformance/kuttl/mutate/refactor/add-emptydirsizelimit/resource-mutated.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod01
  namespace: add-emptydir-sizelimit
spec:
  automountServiceAccountToken: false
  containers:
  - image: aiboelckajdow:1.35
    name: busybox
    volumeMounts:
    - mountPath: /foo
      name: foo
  volumes:
  - emptyDir:
      sizeLimit: 100Mi
    name: foo
---
apiVersion: v1
kind: Pod
metadata:
  name: pod02
  namespace: add-emptydir-sizelimit
spec:
  automountServiceAccountToken: false
  containers:
  - name: busybox
    image: iopybmeyffhjq:1.35
    volumeMounts:
      - mountPath: /foo
        name: foo
  volumes:
  - name: foo
    emptyDir:
      sizeLimit: 50Mi
---
apiVersion: v1
kind: Pod
metadata:
  name: pod03
  namespace: add-emptydir-sizelimit
spec:
  automountServiceAccountToken: false
  containers:
  - name: busybox
    image: flfmfioapzhdts:1.35
    volumeMounts:
      - mountPath: /foo
        name: foo
      - mountPath: /bar
        name: bar
  volumes:
  - name: foo
    emptyDir:
      sizeLimit: 50Mi
  - name: bar
    emptyDir:
      sizeLimit: 100Mi
---
apiVersion: v1
kind: Pod
metadata:
  name: pod04
  namespace: add-emptydir-sizelimit
spec:
  automountServiceAccountToken: false
  containers:
  - image: imvplaiskduqnf:1.35
    name: busybox
    volumeMounts:
    - mountPath: /foo
      name: foo
    - mountPath: /bar
      name: bar
    - mountPath: /baz
      name: baz
  volumes:
  - emptyDir:
      sizeLimit: 50Mi
    name: foo
  - hostPath:
      path: /opt/baz
    name: baz
  - emptyDir:
      sizeLimit: 100Mi
    name: bar
